# BaiZe

./: CMakeLists.txt  README.md  build.sh
cmake/: utils.cmake  version.cmake
code/: CMakeLists.txt  dependencies.cmake  version.hpp
code/src/: main.c
cust/: baize_base_info.cfg  version.cfg
cust/Android/: baize_cust_info.cfg
prebuilts/scripts/: build.sh  compile.sh
